wp-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
      name: wordpressns
      labels:
          name: wordpressns
