nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wpfrontend-svc
  labels:
    name: wpfrontend
spec:
  ports:
    - name:
      port: 80
  selector:
    name: wordpress
