ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
spec:
  rules:
  - host: emalloy.prsn.io
    http:
      paths:
      - path: /
        backend:
          serviceName: wpfrontend-svc
          servicePort: 80
